--- a/app/src/main/res/layout/fragment_medical_history.xml
+++ b/app/src/main/res/layout/fragment_medical_history.xml
@@ -37,6 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="16dp"
+                android:background="?android:selectableItemBackground"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                 android:fontFamily="@font/katibeh"
@@ -54,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="4dp"
+                android:background="?android:selectableItemBackground"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                 android:fontFamily="@font/katibeh"
@@ -71,6 +73,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginTop="8dp"
+                android:background="?android:selectableItemBackground"
                 android:button="@null"
                 android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                 android:fontFamily="@font/katibeh"
@@ -102,6 +105,7 @@
                 android:background="@drawable/custom_input"
                 android:entries="@array/blood_type"
                 android:fontFamily="@font/katibeh"
+                android:gravity="end|center"
                 android:paddingHorizontal="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/blood_type_tv" />
@@ -127,6 +131,7 @@
                 android:background="@drawable/custom_input"
                 android:entries="@array/gender"
                 android:fontFamily="@font/katibeh"
+                android:gravity="end|center"
                 android:padding="12dp"
                 app:layout_constraintEnd_toEndOf="@+id/Gender_tv"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -141,6 +146,7 @@
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:fontFamily="@font/katibeh"
+                android:gravity="end|center"
                 android:hint="@string/height"
                 android:inputType="number"
                 android:paddingStart="20dp"
@@ -156,6 +162,7 @@
                 android:background="@drawable/custom_input"
                 android:ems="10"
                 android:fontFamily="@font/katibeh"
+                android:gravity="end|center"
                 android:hint="@string/weight"
                 android:inputType="number"
                 android:paddingStart="20dp"
