Savior Activity Design adding nav_savior, recyclerView and request details layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="yellow">#FFC114</color>
     <color name="green">#00C980</color>
     <color name="gray">#939393</color>
+    <color name="blue">#0C50A3</color>
 </resources>
