--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -39,7 +39,7 @@
         </com.facebook.shimmer.ShimmerFrameLayout>
 
         <com.todkars.shimmer.ShimmerRecyclerView
-            android:id="@+id/recyclerview"
+            android:id="@+id/recyclerview_history"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginHorizontal="8dp"
