filter requests for savior type

--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -88,5 +88,9 @@
         android:id="@+id/saviorActivity"
         android:name="com.afares.emergency.SaviorActivity"
         android:label="activity_savior"
-        tools:layout="@layout/activity_savior" />
+        tools:layout="@layout/activity_savior" >
+        <argument
+            android:name="userType"
+            app:argType="string" />
+    </activity>
 </navigation>
