--- a/app/src/main/res/layout/fragment_requests.xml
+++ b/app/src/main/res/layout/fragment_requests.xml
@@ -1,49 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RequestsFragment">
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/placeholder_history_row"
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        tools:context=".RequestsFragment">
 
-        <LinearLayout
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/placeholder_request_row"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <include layout="@layout/placeholder_row_layout" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <include layout="@layout/placeholder_row_layout" />
+                <include layout="@layout/placeholder_row_layout" />
 
-            <include layout="@layout/placeholder_row_layout" />
+                <include layout="@layout/placeholder_row_layout" />
 
-            <include layout="@layout/placeholder_row_layout" />
+                <include layout="@layout/placeholder_row_layout" />
 
-            <include layout="@layout/placeholder_row_layout" />
+                <include layout="@layout/placeholder_row_layout" />
 
-        </LinearLayout>
+                <include layout="@layout/placeholder_row_layout" />
 
-    </com.facebook.shimmer.ShimmerFrameLayout>
+            </LinearLayout>
 
-    <com.todkars.shimmer.ShimmerRecyclerView
-        android:id="@+id/recyclerview_requests"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginHorizontal="8dp"
-        android:orientation="vertical"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        </com.facebook.shimmer.ShimmerFrameLayout>
+
+        <com.todkars.shimmer.ShimmerRecyclerView
+            android:id="@+id/recyclerview_requests"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="8dp"
+            android:orientation="vertical"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
