--- a/app/src/main/res/navigation/auth_nav.xml
+++ b/app/src/main/res/navigation/auth_nav.xml
@@ -45,19 +45,15 @@
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_loginFragment_to_signUpFragment"
-            app:destination="@id/signUpFragment"
-            app:enterAnim="@anim/from_right"
-            app:exitAnim="@anim/to_left"
-            app:popEnterAnim="@anim/from_left"
-            app:popExitAnim="@anim/to_right" />
-        <action
             android:id="@+id/action_loginFragment_to_saviorActivity"
             app:destination="@id/saviorActivity"
             app:enterAnim="@anim/from_left"
             app:exitAnim="@anim/to_right"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_userTypeFragment"
+            app:destination="@id/userTypeFragment" />
     </fragment>
     <activity
         android:id="@+id/homeActivity"
@@ -70,17 +66,18 @@
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up">
         <action
-            android:id="@+id/action_signUpFragment_to_homeActivity"
-            app:destination="@id/homeActivity"
-            app:enterAnim="@anim/from_left"
-            app:exitAnim="@anim/to_right"
-            app:popUpTo="@id/signUpFragment"
-            app:popUpToInclusive="true" />
-        <action
             android:id="@+id/action_signUpFragment_to_saviorActivity"
             app:destination="@id/saviorActivity"
             app:enterAnim="@anim/from_left"
             app:exitAnim="@anim/to_right"
+            app:popUpTo="@id/signUpFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="userType"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_signUpFragment_to_homeActivity"
+            app:destination="@id/homeActivity"
             app:popUpTo="@id/signUpFragment"
             app:popUpToInclusive="true" />
     </fragment>
@@ -93,4 +90,13 @@
             android:name="userType"
             app:argType="string" />
     </activity>
+    <fragment
+        android:id="@+id/userTypeFragment"
+        android:name="com.afares.emergency.UserTypeFragment"
+        android:label="fragment_user_type"
+        tools:layout="@layout/fragment_user_type" >
+        <action
+            android:id="@+id/action_userTypeFragment_to_signUpFragment"
+            app:destination="@id/signUpFragment" />
+    </fragment>
 </navigation>
